src/observer/sql/parser/yacc_sql.output
Terminals unused in grammar

    PATH
    STRING_V


State 41 conflicts: 1 reduce/reduce


Grammar

    0 $accept: commands $end

    1 commands: %empty
    2         | commands command

    3 command: select
    4        | insert
    5        | update
    6        | delete
    7        | create_table
    8        | drop_table
    9        | show_tables
   10        | desc_table
   11        | create_index
   12        | drop_index
   13        | sync
   14        | begin
   15        | commit
   16        | rollback
   17        | load_data
   18        | help
   19        | exit

   20 exit: EXIT SEMICOLON

   21 help: HELP SEMICOLON

   22 sync: SYNC SEMICOLON

   23 begin: TRX_BEGIN SEMICOLON

   24 commit: TRX_COMMIT SEMICOLON

   25 rollback: TRX_ROLLBACK SEMICOLON

   26 drop_table: DROP TABLE ID SEMICOLON

   27 show_tables: SHOW TABLES SEMICOLON

   28 desc_table: DESC ID SEMICOLON

   29 create_index: CREATE INDEX ID ON ID LBRACE ID RBRACE SEMICOLON

   30 drop_index: DROP INDEX ID SEMICOLON

   31 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

   32 attr_def_list: %empty
   33              | COMMA attr_def attr_def_list

   34 attr_def: ID_get type LBRACE number RBRACE
   35         | ID_get type

   36 number: NUMBER

   37 type: INT_T
   38     | STRING_T
   39     | FLOAT_T

   40 ID_get: ID

   41 insert: INSERT INTO ID VALUES value_def value_def_list SEMICOLON

   42 value_def_list: %empty
   43               | COMMA value_def value_def_list

   44 value_def: LBRACE value value_list RBRACE

   45 value_list: %empty
   46           | COMMA insert_value value_list

   47 insert_value: value

   48 value: NUMBER
   49      | FLOAT
   50      | SSS

   51 delete: DELETE FROM ID where SEMICOLON

   52 update: UPDATE ID SET ID EQ value where SEMICOLON

   53 select: SELECT select_attr FROM ID rel_list where SEMICOLON

   54 select_attr: STAR
   55            | STAR attr_list
   56            | ID attr_list
   57            | ID DOT ID attr_list

   58 attr_list: %empty
   59          | COMMA ID attr_list
   60          | COMMA ID DOT ID attr_list

   61 rel_list: %empty
   62         | COMMA ID rel_list

   63 where: %empty
   64      | WHERE condition condition_list

   65 condition_list: %empty
   66               | AND condition condition_list

   67 condition: ID comOp value
   68          | value comOp value
   69          | ID comOp ID
   70          | value comOp ID
   71          | ID DOT ID comOp value
   72          | value comOp ID DOT ID
   73          | ID DOT ID comOp ID DOT ID

   74 comOp: EQ
   75      | LT
   76      | GT
   77      | LE
   78      | GE
   79      | NE

   80 load_data: LOAD DATA INFILE SSS INTO TABLE ID SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SEMICOLON (258) 20 21 22 23 24 25 26 27 28 29 30 31 41 51 52 53 80
    CREATE (259) 29 31
    DROP (260) 26 30
    TABLE (261) 26 31 80
    TABLES (262) 27
    INDEX (263) 29 30
    SELECT (264) 53
    DESC (265) 28
    SHOW (266) 27
    SYNC (267) 22
    INSERT (268) 41
    DELETE (269) 51
    UPDATE (270) 52
    LBRACE (271) 29 31 34 44
    RBRACE (272) 29 31 34 44
    COMMA (273) 33 43 46 59 60 62
    TRX_BEGIN (274) 23
    TRX_COMMIT (275) 24
    TRX_ROLLBACK (276) 25
    INT_T (277) 37
    STRING_T (278) 38
    FLOAT_T (279) 39
    HELP (280) 21
    EXIT (281) 20
    DOT (282) 57 60 71 72 73
    INTO (283) 41 80
    VALUES (284) 41
    FROM (285) 51 53
    WHERE (286) 64
    AND (287) 66
    SET (288) 52
    ON (289) 29
    LOAD (290) 80
    DATA (291) 80
    INFILE (292) 80
    EQ (293) 52 74
    LT (294) 75
    GT (295) 76
    LE (296) 77
    GE (297) 78
    NE (298) 79
    NUMBER <number> (299) 36 48
    FLOAT <floats> (300) 49
    ID <string> (301) 26 28 29 30 31 40 41 51 52 53 56 57 59 60 62 67 69 70 71 72 73 80
    PATH <string> (302)
    SSS <string> (303) 50 80
    STAR <string> (304) 54 55
    STRING_V <string> (305)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    commands (52)
        on left: 1 2
        on right: 0 2
    command (53)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 2
    exit (54)
        on left: 20
        on right: 19
    help (55)
        on left: 21
        on right: 18
    sync (56)
        on left: 22
        on right: 13
    begin (57)
        on left: 23
        on right: 14
    commit (58)
        on left: 24
        on right: 15
    rollback (59)
        on left: 25
        on right: 16
    drop_table (60)
        on left: 26
        on right: 8
    show_tables (61)
        on left: 27
        on right: 9
    desc_table (62)
        on left: 28
        on right: 10
    create_index (63)
        on left: 29
        on right: 11
    drop_index (64)
        on left: 30
        on right: 12
    create_table (65)
        on left: 31
        on right: 7
    attr_def_list (66)
        on left: 32 33
        on right: 31 33
    attr_def (67)
        on left: 34 35
        on right: 31 33
    number <number> (68)
        on left: 36
        on right: 34
    type <number> (69)
        on left: 37 38 39
        on right: 34 35
    ID_get (70)
        on left: 40
        on right: 34 35
    insert (71)
        on left: 41
        on right: 4
    value_def_list (72)
        on left: 42 43
        on right: 41 43
    value_def (73)
        on left: 44
        on right: 41 43
    value_list (74)
        on left: 45 46
        on right: 44 46
    insert_value (75)
        on left: 47
        on right: 46
    value <value1> (76)
        on left: 48 49 50
        on right: 44 47 52 67 68 70 71 72
    delete (77)
        on left: 51
        on right: 6
    update (78)
        on left: 52
        on right: 5
    select (79)
        on left: 53
        on right: 3
    select_attr (80)
        on left: 54 55 56 57
        on right: 53
    attr_list (81)
        on left: 58 59 60
        on right: 55 56 57 59 60
    rel_list (82)
        on left: 61 62
        on right: 53 62
    where (83)
        on left: 63 64
        on right: 51 52 53
    condition_list (84)
        on left: 65 66
        on right: 64 66
    condition <condition1> (85)
        on left: 67 68 69 70 71 72 73
        on right: 64 66
    comOp (86)
        on left: 74 75 76 77 78 79
        on right: 67 68 69 70 71 72 73
    load_data (87)
        on left: 80
        on right: 17


State 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


State 1

    0 $accept: commands . $end
    2 commands: commands . command

    $end          shift, and go to state 2
    CREATE        shift, and go to state 3
    DROP          shift, and go to state 4
    SELECT        shift, and go to state 5
    DESC          shift, and go to state 6
    SHOW          shift, and go to state 7
    SYNC          shift, and go to state 8
    INSERT        shift, and go to state 9
    DELETE        shift, and go to state 10
    UPDATE        shift, and go to state 11
    TRX_BEGIN     shift, and go to state 12
    TRX_COMMIT    shift, and go to state 13
    TRX_ROLLBACK  shift, and go to state 14
    HELP          shift, and go to state 15
    EXIT          shift, and go to state 16
    LOAD          shift, and go to state 17

    command       go to state 18
    exit          go to state 19
    help          go to state 20
    sync          go to state 21
    begin         go to state 22
    commit        go to state 23
    rollback      go to state 24
    drop_table    go to state 25
    show_tables   go to state 26
    desc_table    go to state 27
    create_index  go to state 28
    drop_index    go to state 29
    create_table  go to state 30
    insert        go to state 31
    delete        go to state 32
    update        go to state 33
    select        go to state 34
    load_data     go to state 35


State 2

    0 $accept: commands $end .

    $default  accept


State 3

   29 create_index: CREATE . INDEX ID ON ID LBRACE ID RBRACE SEMICOLON
   31 create_table: CREATE . TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    TABLE  shift, and go to state 36
    INDEX  shift, and go to state 37


State 4

   26 drop_table: DROP . TABLE ID SEMICOLON
   30 drop_index: DROP . INDEX ID SEMICOLON

    TABLE  shift, and go to state 38
    INDEX  shift, and go to state 39


State 5

   53 select: SELECT . select_attr FROM ID rel_list where SEMICOLON

    ID    shift, and go to state 40
    STAR  shift, and go to state 41

    select_attr  go to state 42


State 6

   28 desc_table: DESC . ID SEMICOLON

    ID  shift, and go to state 43


State 7

   27 show_tables: SHOW . TABLES SEMICOLON

    TABLES  shift, and go to state 44


State 8

   22 sync: SYNC . SEMICOLON

    SEMICOLON  shift, and go to state 45


State 9

   41 insert: INSERT . INTO ID VALUES value_def value_def_list SEMICOLON

    INTO  shift, and go to state 46


State 10

   51 delete: DELETE . FROM ID where SEMICOLON

    FROM  shift, and go to state 47


State 11

   52 update: UPDATE . ID SET ID EQ value where SEMICOLON

    ID  shift, and go to state 48


State 12

   23 begin: TRX_BEGIN . SEMICOLON

    SEMICOLON  shift, and go to state 49


State 13

   24 commit: TRX_COMMIT . SEMICOLON

    SEMICOLON  shift, and go to state 50


State 14

   25 rollback: TRX_ROLLBACK . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 15

   21 help: HELP . SEMICOLON

    SEMICOLON  shift, and go to state 52


State 16

   20 exit: EXIT . SEMICOLON

    SEMICOLON  shift, and go to state 53


State 17

   80 load_data: LOAD . DATA INFILE SSS INTO TABLE ID SEMICOLON

    DATA  shift, and go to state 54


State 18

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


State 19

   19 command: exit .

    $default  reduce using rule 19 (command)


State 20

   18 command: help .

    $default  reduce using rule 18 (command)


State 21

   13 command: sync .

    $default  reduce using rule 13 (command)


State 22

   14 command: begin .

    $default  reduce using rule 14 (command)


State 23

   15 command: commit .

    $default  reduce using rule 15 (command)


State 24

   16 command: rollback .

    $default  reduce using rule 16 (command)


State 25

    8 command: drop_table .

    $default  reduce using rule 8 (command)


State 26

    9 command: show_tables .

    $default  reduce using rule 9 (command)


State 27

   10 command: desc_table .

    $default  reduce using rule 10 (command)


State 28

   11 command: create_index .

    $default  reduce using rule 11 (command)


State 29

   12 command: drop_index .

    $default  reduce using rule 12 (command)


State 30

    7 command: create_table .

    $default  reduce using rule 7 (command)


State 31

    4 command: insert .

    $default  reduce using rule 4 (command)


State 32

    6 command: delete .

    $default  reduce using rule 6 (command)


State 33

    5 command: update .

    $default  reduce using rule 5 (command)


State 34

    3 command: select .

    $default  reduce using rule 3 (command)


State 35

   17 command: load_data .

    $default  reduce using rule 17 (command)


State 36

   31 create_table: CREATE TABLE . ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 55


State 37

   29 create_index: CREATE INDEX . ID ON ID LBRACE ID RBRACE SEMICOLON

    ID  shift, and go to state 56


State 38

   26 drop_table: DROP TABLE . ID SEMICOLON

    ID  shift, and go to state 57


State 39

   30 drop_index: DROP INDEX . ID SEMICOLON

    ID  shift, and go to state 58


State 40

   56 select_attr: ID . attr_list
   57            | ID . DOT ID attr_list

    COMMA  shift, and go to state 59
    DOT    shift, and go to state 60

    $default  reduce using rule 58 (attr_list)

    attr_list  go to state 61


State 41

   54 select_attr: STAR .
   55            | STAR . attr_list

    COMMA  shift, and go to state 59

    FROM      reduce using rule 54 (select_attr)
    FROM      [reduce using rule 58 (attr_list)]
    $default  reduce using rule 54 (select_attr)

    attr_list  go to state 62


State 42

   53 select: SELECT select_attr . FROM ID rel_list where SEMICOLON

    FROM  shift, and go to state 63


State 43

   28 desc_table: DESC ID . SEMICOLON

    SEMICOLON  shift, and go to state 64


State 44

   27 show_tables: SHOW TABLES . SEMICOLON

    SEMICOLON  shift, and go to state 65


State 45

   22 sync: SYNC SEMICOLON .

    $default  reduce using rule 22 (sync)


State 46

   41 insert: INSERT INTO . ID VALUES value_def value_def_list SEMICOLON

    ID  shift, and go to state 66


State 47

   51 delete: DELETE FROM . ID where SEMICOLON

    ID  shift, and go to state 67


State 48

   52 update: UPDATE ID . SET ID EQ value where SEMICOLON

    SET  shift, and go to state 68


State 49

   23 begin: TRX_BEGIN SEMICOLON .

    $default  reduce using rule 23 (begin)


State 50

   24 commit: TRX_COMMIT SEMICOLON .

    $default  reduce using rule 24 (commit)


State 51

   25 rollback: TRX_ROLLBACK SEMICOLON .

    $default  reduce using rule 25 (rollback)


State 52

   21 help: HELP SEMICOLON .

    $default  reduce using rule 21 (help)


State 53

   20 exit: EXIT SEMICOLON .

    $default  reduce using rule 20 (exit)


State 54

   80 load_data: LOAD DATA . INFILE SSS INTO TABLE ID SEMICOLON

    INFILE  shift, and go to state 69


State 55

   31 create_table: CREATE TABLE ID . LBRACE attr_def attr_def_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 70


State 56

   29 create_index: CREATE INDEX ID . ON ID LBRACE ID RBRACE SEMICOLON

    ON  shift, and go to state 71


State 57

   26 drop_table: DROP TABLE ID . SEMICOLON

    SEMICOLON  shift, and go to state 72


State 58

   30 drop_index: DROP INDEX ID . SEMICOLON

    SEMICOLON  shift, and go to state 73


State 59

   59 attr_list: COMMA . ID attr_list
   60          | COMMA . ID DOT ID attr_list

    ID  shift, and go to state 74


State 60

   57 select_attr: ID DOT . ID attr_list

    ID  shift, and go to state 75


State 61

   56 select_attr: ID attr_list .

    $default  reduce using rule 56 (select_attr)


State 62

   55 select_attr: STAR attr_list .

    $default  reduce using rule 55 (select_attr)


State 63

   53 select: SELECT select_attr FROM . ID rel_list where SEMICOLON

    ID  shift, and go to state 76


State 64

   28 desc_table: DESC ID SEMICOLON .

    $default  reduce using rule 28 (desc_table)


State 65

   27 show_tables: SHOW TABLES SEMICOLON .

    $default  reduce using rule 27 (show_tables)


State 66

   41 insert: INSERT INTO ID . VALUES value_def value_def_list SEMICOLON

    VALUES  shift, and go to state 77


State 67

   51 delete: DELETE FROM ID . where SEMICOLON

    WHERE  shift, and go to state 78

    $default  reduce using rule 63 (where)

    where  go to state 79


State 68

   52 update: UPDATE ID SET . ID EQ value where SEMICOLON

    ID  shift, and go to state 80


State 69

   80 load_data: LOAD DATA INFILE . SSS INTO TABLE ID SEMICOLON

    SSS  shift, and go to state 81


State 70

   31 create_table: CREATE TABLE ID LBRACE . attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 82

    attr_def  go to state 83
    ID_get    go to state 84


State 71

   29 create_index: CREATE INDEX ID ON . ID LBRACE ID RBRACE SEMICOLON

    ID  shift, and go to state 85


State 72

   26 drop_table: DROP TABLE ID SEMICOLON .

    $default  reduce using rule 26 (drop_table)


State 73

   30 drop_index: DROP INDEX ID SEMICOLON .

    $default  reduce using rule 30 (drop_index)


State 74

   59 attr_list: COMMA ID . attr_list
   60          | COMMA ID . DOT ID attr_list

    COMMA  shift, and go to state 59
    DOT    shift, and go to state 86

    $default  reduce using rule 58 (attr_list)

    attr_list  go to state 87


State 75

   57 select_attr: ID DOT ID . attr_list

    COMMA  shift, and go to state 59

    $default  reduce using rule 58 (attr_list)

    attr_list  go to state 88


State 76

   53 select: SELECT select_attr FROM ID . rel_list where SEMICOLON

    COMMA  shift, and go to state 89

    $default  reduce using rule 61 (rel_list)

    rel_list  go to state 90


State 77

   41 insert: INSERT INTO ID VALUES . value_def value_def_list SEMICOLON

    LBRACE  shift, and go to state 91

    value_def  go to state 92


State 78

   64 where: WHERE . condition condition_list

    NUMBER  shift, and go to state 93
    FLOAT   shift, and go to state 94
    ID      shift, and go to state 95
    SSS     shift, and go to state 96

    value      go to state 97
    condition  go to state 98


State 79

   51 delete: DELETE FROM ID where . SEMICOLON

    SEMICOLON  shift, and go to state 99


State 80

   52 update: UPDATE ID SET ID . EQ value where SEMICOLON

    EQ  shift, and go to state 100


State 81

   80 load_data: LOAD DATA INFILE SSS . INTO TABLE ID SEMICOLON

    INTO  shift, and go to state 101


State 82

   40 ID_get: ID .

    $default  reduce using rule 40 (ID_get)


State 83

   31 create_table: CREATE TABLE ID LBRACE attr_def . attr_def_list RBRACE SEMICOLON

    COMMA  shift, and go to state 102

    $default  reduce using rule 32 (attr_def_list)

    attr_def_list  go to state 103


State 84

   34 attr_def: ID_get . type LBRACE number RBRACE
   35         | ID_get . type

    INT_T     shift, and go to state 104
    STRING_T  shift, and go to state 105
    FLOAT_T   shift, and go to state 106

    type  go to state 107


State 85

   29 create_index: CREATE INDEX ID ON ID . LBRACE ID RBRACE SEMICOLON

    LBRACE  shift, and go to state 108


State 86

   60 attr_list: COMMA ID DOT . ID attr_list

    ID  shift, and go to state 109


State 87

   59 attr_list: COMMA ID attr_list .

    $default  reduce using rule 59 (attr_list)


State 88

   57 select_attr: ID DOT ID attr_list .

    $default  reduce using rule 57 (select_attr)


State 89

   62 rel_list: COMMA . ID rel_list

    ID  shift, and go to state 110


State 90

   53 select: SELECT select_attr FROM ID rel_list . where SEMICOLON

    WHERE  shift, and go to state 78

    $default  reduce using rule 63 (where)

    where  go to state 111


State 91

   44 value_def: LBRACE . value value_list RBRACE

    NUMBER  shift, and go to state 93
    FLOAT   shift, and go to state 94
    SSS     shift, and go to state 96

    value  go to state 112


State 92

   41 insert: INSERT INTO ID VALUES value_def . value_def_list SEMICOLON

    COMMA  shift, and go to state 113

    $default  reduce using rule 42 (value_def_list)

    value_def_list  go to state 114


State 93

   48 value: NUMBER .

    $default  reduce using rule 48 (value)


State 94

   49 value: FLOAT .

    $default  reduce using rule 49 (value)


State 95

   67 condition: ID . comOp value
   69          | ID . comOp ID
   71          | ID . DOT ID comOp value
   73          | ID . DOT ID comOp ID DOT ID

    DOT  shift, and go to state 115
    EQ   shift, and go to state 116
    LT   shift, and go to state 117
    GT   shift, and go to state 118
    LE   shift, and go to state 119
    GE   shift, and go to state 120
    NE   shift, and go to state 121

    comOp  go to state 122


State 96

   50 value: SSS .

    $default  reduce using rule 50 (value)


State 97

   68 condition: value . comOp value
   70          | value . comOp ID
   72          | value . comOp ID DOT ID

    EQ  shift, and go to state 116
    LT  shift, and go to state 117
    GT  shift, and go to state 118
    LE  shift, and go to state 119
    GE  shift, and go to state 120
    NE  shift, and go to state 121

    comOp  go to state 123


State 98

   64 where: WHERE condition . condition_list

    AND  shift, and go to state 124

    $default  reduce using rule 65 (condition_list)

    condition_list  go to state 125


State 99

   51 delete: DELETE FROM ID where SEMICOLON .

    $default  reduce using rule 51 (delete)


State 100

   52 update: UPDATE ID SET ID EQ . value where SEMICOLON

    NUMBER  shift, and go to state 93
    FLOAT   shift, and go to state 94
    SSS     shift, and go to state 96

    value  go to state 126


State 101

   80 load_data: LOAD DATA INFILE SSS INTO . TABLE ID SEMICOLON

    TABLE  shift, and go to state 127


State 102

   33 attr_def_list: COMMA . attr_def attr_def_list

    ID  shift, and go to state 82

    attr_def  go to state 128
    ID_get    go to state 84


State 103

   31 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list . RBRACE SEMICOLON

    RBRACE  shift, and go to state 129


State 104

   37 type: INT_T .

    $default  reduce using rule 37 (type)


State 105

   38 type: STRING_T .

    $default  reduce using rule 38 (type)


State 106

   39 type: FLOAT_T .

    $default  reduce using rule 39 (type)


State 107

   34 attr_def: ID_get type . LBRACE number RBRACE
   35         | ID_get type .

    LBRACE  shift, and go to state 130

    $default  reduce using rule 35 (attr_def)


State 108

   29 create_index: CREATE INDEX ID ON ID LBRACE . ID RBRACE SEMICOLON

    ID  shift, and go to state 131


State 109

   60 attr_list: COMMA ID DOT ID . attr_list

    COMMA  shift, and go to state 59

    $default  reduce using rule 58 (attr_list)

    attr_list  go to state 132


State 110

   62 rel_list: COMMA ID . rel_list

    COMMA  shift, and go to state 89

    $default  reduce using rule 61 (rel_list)

    rel_list  go to state 133


State 111

   53 select: SELECT select_attr FROM ID rel_list where . SEMICOLON

    SEMICOLON  shift, and go to state 134


State 112

   44 value_def: LBRACE value . value_list RBRACE

    COMMA  shift, and go to state 135

    $default  reduce using rule 45 (value_list)

    value_list  go to state 136


State 113

   43 value_def_list: COMMA . value_def value_def_list

    LBRACE  shift, and go to state 91

    value_def  go to state 137


State 114

   41 insert: INSERT INTO ID VALUES value_def value_def_list . SEMICOLON

    SEMICOLON  shift, and go to state 138


State 115

   71 condition: ID DOT . ID comOp value
   73          | ID DOT . ID comOp ID DOT ID

    ID  shift, and go to state 139


State 116

   74 comOp: EQ .

    $default  reduce using rule 74 (comOp)


State 117

   75 comOp: LT .

    $default  reduce using rule 75 (comOp)


State 118

   76 comOp: GT .

    $default  reduce using rule 76 (comOp)


State 119

   77 comOp: LE .

    $default  reduce using rule 77 (comOp)


State 120

   78 comOp: GE .

    $default  reduce using rule 78 (comOp)


State 121

   79 comOp: NE .

    $default  reduce using rule 79 (comOp)


State 122

   67 condition: ID comOp . value
   69          | ID comOp . ID

    NUMBER  shift, and go to state 93
    FLOAT   shift, and go to state 94
    ID      shift, and go to state 140
    SSS     shift, and go to state 96

    value  go to state 141


State 123

   68 condition: value comOp . value
   70          | value comOp . ID
   72          | value comOp . ID DOT ID

    NUMBER  shift, and go to state 93
    FLOAT   shift, and go to state 94
    ID      shift, and go to state 142
    SSS     shift, and go to state 96

    value  go to state 143


State 124

   66 condition_list: AND . condition condition_list

    NUMBER  shift, and go to state 93
    FLOAT   shift, and go to state 94
    ID      shift, and go to state 95
    SSS     shift, and go to state 96

    value      go to state 97
    condition  go to state 144


State 125

   64 where: WHERE condition condition_list .

    $default  reduce using rule 64 (where)


State 126

   52 update: UPDATE ID SET ID EQ value . where SEMICOLON

    WHERE  shift, and go to state 78

    $default  reduce using rule 63 (where)

    where  go to state 145


State 127

   80 load_data: LOAD DATA INFILE SSS INTO TABLE . ID SEMICOLON

    ID  shift, and go to state 146


State 128

   33 attr_def_list: COMMA attr_def . attr_def_list

    COMMA  shift, and go to state 102

    $default  reduce using rule 32 (attr_def_list)

    attr_def_list  go to state 147


State 129

   31 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE . SEMICOLON

    SEMICOLON  shift, and go to state 148


State 130

   34 attr_def: ID_get type LBRACE . number RBRACE

    NUMBER  shift, and go to state 149

    number  go to state 150


State 131

   29 create_index: CREATE INDEX ID ON ID LBRACE ID . RBRACE SEMICOLON

    RBRACE  shift, and go to state 151


State 132

   60 attr_list: COMMA ID DOT ID attr_list .

    $default  reduce using rule 60 (attr_list)


State 133

   62 rel_list: COMMA ID rel_list .

    $default  reduce using rule 62 (rel_list)


State 134

   53 select: SELECT select_attr FROM ID rel_list where SEMICOLON .

    $default  reduce using rule 53 (select)


State 135

   46 value_list: COMMA . insert_value value_list

    NUMBER  shift, and go to state 93
    FLOAT   shift, and go to state 94
    SSS     shift, and go to state 96

    insert_value  go to state 152
    value         go to state 153


State 136

   44 value_def: LBRACE value value_list . RBRACE

    RBRACE  shift, and go to state 154


State 137

   43 value_def_list: COMMA value_def . value_def_list

    COMMA  shift, and go to state 113

    $default  reduce using rule 42 (value_def_list)

    value_def_list  go to state 155


State 138

   41 insert: INSERT INTO ID VALUES value_def value_def_list SEMICOLON .

    $default  reduce using rule 41 (insert)


State 139

   71 condition: ID DOT ID . comOp value
   73          | ID DOT ID . comOp ID DOT ID

    EQ  shift, and go to state 116
    LT  shift, and go to state 117
    GT  shift, and go to state 118
    LE  shift, and go to state 119
    GE  shift, and go to state 120
    NE  shift, and go to state 121

    comOp  go to state 156


State 140

   69 condition: ID comOp ID .

    $default  reduce using rule 69 (condition)


State 141

   67 condition: ID comOp value .

    $default  reduce using rule 67 (condition)


State 142

   70 condition: value comOp ID .
   72          | value comOp ID . DOT ID

    DOT  shift, and go to state 157

    $default  reduce using rule 70 (condition)


State 143

   68 condition: value comOp value .

    $default  reduce using rule 68 (condition)


State 144

   66 condition_list: AND condition . condition_list

    AND  shift, and go to state 124

    $default  reduce using rule 65 (condition_list)

    condition_list  go to state 158


State 145

   52 update: UPDATE ID SET ID EQ value where . SEMICOLON

    SEMICOLON  shift, and go to state 159


State 146

   80 load_data: LOAD DATA INFILE SSS INTO TABLE ID . SEMICOLON

    SEMICOLON  shift, and go to state 160


State 147

   33 attr_def_list: COMMA attr_def attr_def_list .

    $default  reduce using rule 33 (attr_def_list)


State 148

   31 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON .

    $default  reduce using rule 31 (create_table)


State 149

   36 number: NUMBER .

    $default  reduce using rule 36 (number)


State 150

   34 attr_def: ID_get type LBRACE number . RBRACE

    RBRACE  shift, and go to state 161


State 151

   29 create_index: CREATE INDEX ID ON ID LBRACE ID RBRACE . SEMICOLON

    SEMICOLON  shift, and go to state 162


State 152

   46 value_list: COMMA insert_value . value_list

    COMMA  shift, and go to state 135

    $default  reduce using rule 45 (value_list)

    value_list  go to state 163


State 153

   47 insert_value: value .

    $default  reduce using rule 47 (insert_value)


State 154

   44 value_def: LBRACE value value_list RBRACE .

    $default  reduce using rule 44 (value_def)


State 155

   43 value_def_list: COMMA value_def value_def_list .

    $default  reduce using rule 43 (value_def_list)


State 156

   71 condition: ID DOT ID comOp . value
   73          | ID DOT ID comOp . ID DOT ID

    NUMBER  shift, and go to state 93
    FLOAT   shift, and go to state 94
    ID      shift, and go to state 164
    SSS     shift, and go to state 96

    value  go to state 165


State 157

   72 condition: value comOp ID DOT . ID

    ID  shift, and go to state 166


State 158

   66 condition_list: AND condition condition_list .

    $default  reduce using rule 66 (condition_list)


State 159

   52 update: UPDATE ID SET ID EQ value where SEMICOLON .

    $default  reduce using rule 52 (update)


State 160

   80 load_data: LOAD DATA INFILE SSS INTO TABLE ID SEMICOLON .

    $default  reduce using rule 80 (load_data)


State 161

   34 attr_def: ID_get type LBRACE number RBRACE .

    $default  reduce using rule 34 (attr_def)


State 162

   29 create_index: CREATE INDEX ID ON ID LBRACE ID RBRACE SEMICOLON .

    $default  reduce using rule 29 (create_index)


State 163

   46 value_list: COMMA insert_value value_list .

    $default  reduce using rule 46 (value_list)


State 164

   73 condition: ID DOT ID comOp ID . DOT ID

    DOT  shift, and go to state 167


State 165

   71 condition: ID DOT ID comOp value .

    $default  reduce using rule 71 (condition)


State 166

   72 condition: value comOp ID DOT ID .

    $default  reduce using rule 72 (condition)


State 167

   73 condition: ID DOT ID comOp ID DOT . ID

    ID  shift, and go to state 168


State 168

   73 condition: ID DOT ID comOp ID DOT ID .

    $default  reduce using rule 73 (condition)
